Implemented, tested and documented Issue 7 and its sub issues
